@@ -1,4 +1,4 @@
-love@LOVE_SUFFIX@ (0.9.0~ppatest5) precise; urgency=medium
+love@LOVE_SUFFIX@ (0.9.2~rc1ppa3) precise; urgency=medium
 
   * Upstream testing release
 
